paragraph text too small on mobile, fixing

--- a/assets/style.css
+++ b/assets/style.css
@@ -56,7 +56,7 @@ p {
   font-family: Georgia, 'Times New Roman', Times, serif;
   width: 75%;
   margin: auto;
-  font-size: 2vw; /* adjust the value to your liking */
+  font-size: 3vw; /* adjust the value to your liking */
 }
 
 .logo {
@@ -546,7 +546,6 @@ button {
   .footertext {
     flex-direction: column; /* set the direction of the flex items to be vertical */
     align-items: center; /* center the items vertically */
-    justify-content: space-evenly
     gap: 10px;
   }
 }
